Configure Azure Developer Pipeline

--- a/Store/appsettings.json
+++ b/Store/appsettings.json
@@ -1,13 +1,14 @@
 {
-  "DetailedErrors": true,
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
-  "ProductEndpoint": "http://localhost:5200",
-  "ProductEndpointHttps": "https://localhost:5200",
-  "ImagePrefix": "http://localhost:5200/images"
+    "DetailedErrors": true,
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ProductEndpoint": "http://localhost:5228",
+    "ProductEndpointHttps": "https://localhost:7130",
+    "ImagePrefix": "http://localhost:5228/images",
+    "ImagePrefixHttps": "http://localhost:7130/images"
 }
